work navigation mobile fixed

--- a/css/style.css
+++ b/css/style.css
@@ -314,23 +314,15 @@ ol.type li a:hover {
 	font-weight: 400;
 	color: #fff;
 }
-#contact form {
-	padding: 30px 0;
-}
 #contact .text-danger {
+	margin-bottom: 10px;
 	color: #E87E04;
-	text-align: left;
 }
 label {
 	font-size: 12px;
 	font-weight: 400;
 	font-family: 'Open Sans', sans-serif;
 	float: left;
-}
-#contact .form-control {
-	display: block;
-	width: 100%;
-	padding: 6px 12px;
 }
 #contact .social {
 	width: 100%;
@@ -392,5 +384,13 @@ a:focus, .btn:focus, .btn:active:focus, .btn.active:focus, .btn.focus, .btn:acti
   padding: 15px;
   border: none;
   font-size:24px
+	}
+	.type li{
+	width: 40%
+	}
+	li .work-btn {
+	display: block;
+	float: left;
+	width: 100% !important;
 	}
 }
